# tap-for-bpm

./: CMakeLists.txt  README.md  meson.build  tap-for-bpm.rkt
data/: com.kisaragi-hiu.tap-for-bpm.appdata.xml  com.kisaragi-hiu.tap-for-bpm.desktop.in
po/: LINGUAS  POTFILES  com.kisaragi-hiu.tap-for-bpm.pot  ja.po  meson.build  zh-TW.po
src/: tap-for-bpm.vala
